# jup-sh

./: .gitignore  CHANGELOG.md  README.md  app.js  package-lock.json  package.json  styles.css  tsconfig.json
.github/workflows/: docs.yml
docs/: agent-integration.md  architecture.md  cli-json-contract.md  cli-release-plan.md  cli-technical-design.md  index.md  jupiter-quote-design.md  npm-alpha-release-checklist.md  product.md  quickstart.md  risk-review-export-design.md  sdk-technical-design.md  x-content.md  x-running-notes.md
docs/_layouts/: default.html
docs/assets/: docs.css
docs/releases/: 0.1.0-alpha.0.md  0.1.0-alpha.3.md  0.1.0-alpha.6.md  0.1.0-alpha.7.md
examples/: node-agent-pay.ts  node-agent-review.ts
npm/: README.md  package.json
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/core/src/: lib.rs
scripts/: alpha-smoke.mjs  npm-pack-dry-run.mjs  release-check.mjs  sdk-smoke.mjs
sdk/: index.ts
tests/fixtures/: pay-review-required.json
