[workspace]
members = ["crates/*"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
jup-sh-core = { path = "crates/core" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
