[package]
name = "jup-sh-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "jup-sh"
path = "src/main.rs"

[dependencies]
jup-sh-core = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
